--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@ nav ul li a{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
-#diconodinoi > div > div > div > div > img{
+#collapsereviews > div > div > div> div > div > img{
     border-radius: 50%;
 }
 
